--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2 centered">
-          <h1>холодильник<br/>Sign up now & prepare to enjoy our service.</h1>
+          <h1> HouseHold Expo </h1>
           <div class="mtb">
             <form role="form" action="register.php" method="post" enctype="plain">
               <input type="email" name="email" class="subscribe-input" placeholder="Enter your e-mail address..." required>
@@ -51,7 +51,7 @@
             </form>
           </div>
           <!--/mt-->
-          <h6>30 DAY FREE TRIAL - NO CREDIT CARD NEEDED.</h6>
+          <h6>  СКИДКИ НА ПЕРВУЮ ПОКУПКУ </h6>
         </div>
       </div>
       <!--/row-->
