--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 <body>
 
   <div id="h">
-    <div class="logo">SumoLanding</div>
+    <div class="logo">ХОЛОДИЛЬНИКРУ
+    </div>
     <div class="social hidden-xs">
       <a href="#"><i class="ion-social-twitter"></i></a>
       <a href="#"><i class="ion-social-instagram"></i></a>
@@ -43,7 +44,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2 centered">
-          <h1> HouseHold Expo </h1>
+          <h1>"HouseHoldExpo"</h1>
           <div class="mtb">
             <form role="form" action="register.php" method="post" enctype="plain">
               <input type="email" name="email" class="subscribe-input" placeholder="Enter your e-mail address..." required>
@@ -51,7 +52,7 @@
             </form>
           </div>
           <!--/mt-->
-          <h6>  СКИДКИ НА ПЕРВУЮ ПОКУПКУ </h6>
+          <h6> "СКИДКИ НА ПЕРВУЮ ПОКУПКУ" </h6>
         </div>
       </div>
       <!--/row-->
