--- a/index.html
+++ b/index.html
@@ -64,7 +64,12 @@
   <div class="container ptb">
     <div class="row">
       <div class="col-md-6">
-        <h2>All the features you want in this kind of apps you'll got it here.</h2>
+        <h2> ХОЛОДИЛЬНИК.РУ — российский интернет-магазин,
+специализирующийся на продаже электроники и бытовой техники
+отечественного и зарубежного производства. Основная задача
+ХОЛОДИЛЬНИК.РУ — сделать путь клиента от выбора товара до
+совершения покупки и получения заказа максимально простым и
+удобным.</h2>
         <p class="mt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         <p class="store">
           <a href="#"><img src="img/app-store.png" height="50" alt=""></a>
