--- a/index.html
+++ b/index.html
@@ -66,11 +66,12 @@
       <div class="col-md-6">
         <h2> "ХОЛОДИЛЬНИК.РУ — российский интернет-магазин,
 специализирующийся на продаже электроники и бытовой техники
-отечественного и зарубежного производства. Основная задача
+отечественного и зарубежного производства. 
+          <pre> </pre>Основная задача
 ХОЛОДИЛЬНИК.РУ — сделать путь клиента от выбора товара до
 совершения покупки и получения заказа максимально простым и
 удобным."</h2>
-        <p class="mt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        <p class="mt"> Ценовая политика наших товаров средняя, а большая часть ассортимента – выше средней. Наш магазин готов предоставить скидки пользователям из сообщества «ВКонтакте» в 15%. Такая же скидка доступна покупателям,совершающим покупку напрямую из приложения в сообществесоциальной сети.</p>
         <p class="store">
           <a href="#"><img src="img/app-store.png" height="50" alt=""></a>
           <a href="#"><img src="img/google-play.png" height="50" alt=""></a>
