--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Sumolanding Bootstrap Landing Template</title>
+  <title>«Holodilnik.ru»</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -67,10 +67,10 @@
         <h2> "ХОЛОДИЛЬНИК.РУ — российский интернет-магазин,
 специализирующийся на продаже электроники и бытовой техники
 отечественного и зарубежного производства. 
-          <pre> </pre>Основная задача
+          <pre> Основная задача
 ХОЛОДИЛЬНИК.РУ — сделать путь клиента от выбора товара до
 совершения покупки и получения заказа максимально простым и
-удобным."</h2>
+удобным."</h2> </pre>
         <p class="mt"> Ценовая политика наших товаров средняя, а большая часть ассортимента – выше средней. Наш магазин готов предоставить скидки пользователям из сообщества «ВКонтакте» в 15%. Такая же скидка доступна покупателям,совершающим покупку напрямую из приложения в сообществесоциальной сети.</p>
         <p class="store">
           <a href="#"><img src="img/app-store.png" height="50" alt=""></a>
