--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </form>
           </div>
           <!--/mt-->
-          <h6> "СКИДКИ НА ПЕРВУЮ ПОКУПКУ" </h6>
+          <h6>СКИДКИ НА ПЕРВУЮ ПОКУПКУ</h6>
         </div>
       </div>
       <!--/row-->
@@ -64,13 +64,13 @@
   <div class="container ptb">
     <div class="row">
       <div class="col-md-6">
-        <h2> "ХОЛОДИЛЬНИК.РУ — российский интернет-магазин,
+        <h2> ХОЛОДИЛЬНИК.РУ — российский интернет-магазин,
 специализирующийся на продаже электроники и бытовой техники
 отечественного и зарубежного производства. 
           <pre> Основная задача
 ХОЛОДИЛЬНИК.РУ — сделать путь клиента от выбора товара до
 совершения покупки и получения заказа максимально простым и
-удобным."</h2> </pre>
+удобным.</h2> </pre>
         <p class="mt"> Ценовая политика наших товаров средняя, а большая часть ассортимента – выше средней. Наш магазин готов предоставить скидки пользователям из сообщества «ВКонтакте» в 15%. Такая же скидка доступна покупателям,совершающим покупку напрямую из приложения в сообществесоциальной сети.</p>
         <p class="store">
           <a href="#"><img src="img/app-store.png" height="50" alt=""></a>
@@ -89,7 +89,7 @@
     <div class="container">
       <div class="row centered">
         <div class="col-md-8 col-md-offset-2">
-          <h1>Join your experiences with the people you care more. Let us help you.</h1>
+          <h1>Заказывайте импортные холодильники прямо сейчас</h1>
           <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</h4>
           <p><button class="btn btn-conf-2 btn-green">Learn More</button></p>
         </div>
