--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <pre> Основная задача
 ХОЛОДИЛЬНИК.РУ — сделать путь клиента от выбора товара до
 совершения покупки и получения заказа максимально простым и
-удобным.</h2> </pre>
+удобным.</h2> 
         <p class="mt"> Ценовая политика наших товаров средняя, а большая часть ассортимента – выше средней. Наш магазин готов предоставить скидки пользователям из сообщества «ВКонтакте» в 15%. Такая же скидка доступна покупателям,совершающим покупку напрямую из приложения в сообществесоциальной сети.</p>
         <p class="store">
           <a href="#"><img src="img/app-store.png" height="50" alt=""></a>
