--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="row centered">
         <div class="col-md-8 col-md-offset-2">
           <h1>Заказывайте импортные холодильники прямо сейчас</h1>
-          <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</h4>
+          <h4>На первый заказ - бесплатное установление холодильника</h4>
           <p><button class="btn btn-conf-2 btn-green">Learn More</button></p>
         </div>
         <!--/col-md-8-->
