--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="row centered">
         <div class="col-md-8 col-md-offset-2">
           <h1>Заказывайте импортные холодильники прямо сейчас</h1>
-          <h4>На первый заказ - бесплатное установление холодильника</h4>
+          <h4>На первый заказ-бесплатное установление холодильника</h4>
           <p><button class="btn btn-conf-2 btn-green">Learn More</button></p>
         </div>
         <!--/col-md-8-->
@@ -101,7 +101,7 @@
 
   <div class="container ptb">
     <div class="row centered">
-      <h2 class="mb">Our Pricing Model<br/>It's Quite Easy To Understand.</h2>
+      <h2 class="mb">Услгуи Товары Цены<br/></h2>
       <div class="col-md-4">
         <div class="price-table">
           <div class="p-head">
