--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
       <div class="col-md-4">
         <div class="price-table">
           <div class="p-head">
-            Standard
+            УСЛУГИ
           </div>
           <div class="p-body">
             <ul class="features">
-              <li>10GB Storage Space</li>
-              <li>Free Support</li>
-              <li>100 Users</li>
-              <li>100GB Bandwith</li>
+              <li>установка холодильника</li>
+              <li>замеры</li>
+              <li>доставка</li>
+              <li>постгарантийный ремонт</li>
             </ul>
             <div class="price">
               <span class="sub">$</span>
@@ -131,7 +131,7 @@
       <div class="col-md-4">
         <div class="price-table">
           <div class="p-head">
-            Business
+            ТОВАРЫ
           </div>
           <div class="p-body">
             <ul class="features">
@@ -157,7 +157,7 @@
       <div class="col-md-4">
         <div class="price-table">
           <div class="p-head">
-            Corporate
+            ЦЕНЫ
           </div>
           <div class="p-body">
             <ul class="features">
@@ -246,13 +246,17 @@
         <h5>HELLO@EXAMPLE.COM</h5>
 
         <p class="mt">
-          <a href="#"><i class="ion-social-twitter"></i></a>
-          <a href="#"><i class="ion-social-dribbble"></i></a>
+  
+          <a href="#"><i class="bi bi-telegram"></i></a>
+   <!-- твитер и др спрятаны
+        <a href="#"><i class="ion-social-dribbble"></i></a>
           <a href="#"><i class="ion-social-instagram"></i></a>
           <a href="#"><i class="ion-social-facebook"></i></a>
           <a href="#"><i class="ion-social-pinterest"></i></a>
-          <a href="#"><i class="ion-social-tumblr"></i></a>
-        </p>
+          <a href="#"><i class="ion-social-tumblr"></i></a>          -->
+        </p> 
+     
+      
       </div>
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
