--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
 <body>
 
   <div id="h">
-    <div class="logo">ХОЛОДИЛЬНИКРУ
+    <div class="logo">ХОЛОДИЛЬНИК.РУ
     </div>
     <div class="social hidden-xs">
-      <a href="#"><i class="ion-social-twitter"></i></a>
+      
+      <a href="#"><i class="bi bi-telegram"></i></a>
       <a href="#"><i class="ion-social-instagram"></i></a>
       <a href="#"><i class="ion-social-facebook"></i></a>
     </div>
