--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <div class="logo">ХОЛОДИЛЬНИК.РУ
     </div>
     <div class="social hidden-xs">
-      
-      <a href="#"><i class="bi bi-telegram"></i></a>
+      <i class="bi bi-send"></i>
+      <!--a href="#"><i class="bi bi-telegram"></i></a-->
       <a href="#"><i class="ion-social-instagram"></i></a>
       <a href="#"><i class="ion-social-facebook"></i></a>
     </div>
