--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h2> ХОЛОДИЛЬНИК.РУ — российский интернет-магазин,
 специализирующийся на продаже электроники и бытовой техники
 отечественного и зарубежного производства. 
-          <pre> Основная задача
+          <br/> Основная задача
 ХОЛОДИЛЬНИК.РУ — сделать путь клиента от выбора товара до
 совершения покупки и получения заказа максимально простым и
 удобным.</h2> 
