--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 ХОЛОДИЛЬНИК.РУ — сделать путь клиента от выбора товара до
 совершения покупки и получения заказа максимально простым и
 удобным.</h2> 
-        <p class="mt"> Ценовая политика наших товаров средняя, а большая часть ассортимента – выше средней. Наш магазин готов предоставить скидки пользователям из сообщества «ВКонтакте» в 15%. Такая же скидка доступна покупателям,совершающим покупку напрямую из приложения в сообществесоциальной сети.</p>
+        <p class="mt"> Ценовая политика наших товаров средняя, а большая часть ассортимента – выше средней. Наш магазин готов предоставить скидки пользователям из сообщества «ВКонтакте» в 15%. 
+          Такая же скидка доступна покупателям,совершающим покупку напрямую из приложения в сообществесоциальной сети.</p>
         <p class="store">
           <a href="#"><img src="img/app-store.png" height="50" alt=""></a>
           <a href="#"><img src="img/google-play.png" height="50" alt=""></a>
