--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
   <div class="container ptb">
     <div class="row">
       <div class="col-md-6">
-        <h2> ХОЛОДИЛЬНИК.РУ — российский интернет-магазин,
+        <h2> Холодильник.ру — российский интернет-магазин,
 специализирующийся на продаже электроники и бытовой техники
 отечественного и зарубежного производства. 
           <br/> Основная задача
-ХОЛОДИЛЬНИК.РУ — сделать путь клиента от выбора товара до
+Холодильник.ру — сделать путь клиента от выбора товара до
 совершения покупки и получения заказа максимально простым и
 удобным.</h2> 
         <p class="mt"> Ценовая политика наших товаров средняя, а большая часть ассортимента – выше средней. Наш магазин готов предоставить скидки пользователям из сообщества «ВКонтакте» в 15%. 
