--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <span class="sub">/mo.</span>
             </div>
             <!--/price-->
-            <button class="btn btn-conf-2 btn-green">Subscribe Now</button>
+            <button class="btn btn-conf-2 btn-green">написать</button>
           </div>
           <!--/p-body-->
         </div>
@@ -137,10 +137,10 @@
           </div>
           <div class="p-body">
             <ul class="features">
-              <li>50GB Storage Space</li>
-              <li>Free Support</li>
-              <li>500 Users</li>
-              <li>500GB Bandwith</li>
+              <li></li>
+              <li>холодильники</li>
+              <li>морозильники</li>
+              <li>иные </li>
             </ul>
             <div class="price">
               <span class="sub">$</span>
@@ -148,7 +148,7 @@
               <span class="sub">/mo.</span>
             </div>
             <!--/price-->
-            <button class="btn btn-conf-2 btn-green">Subscribe Now</button>
+            <button class="btn btn-conf-2 btn-green">написать</button>
           </div>
           <!--/p-body-->
         </div>
@@ -174,7 +174,7 @@
               <span class="sub">/mo.</span>
             </div>
             <!--/price-->
-            <button class="btn btn-conf-2 btn-green">Subscribe Now</button>
+            <button class="btn btn-conf-2 btn-green">написать</button>
           </div>
           <!--/p-body-->
         </div>
