--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="col-md-8 col-md-offset-2">
           <h1>Заказывайте импортные холодильники прямо сейчас</h1>
           <h4>На первый заказ-бесплатное установление холодильника</h4>
-          <p><button class="btn btn-conf-2 btn-green">Learn More</button></p>
+          <p><button class="btn btn-conf-2 btn-green">ЗАКАЗАТЬ</button></p>
         </div>
         <!--/col-md-8-->
       </div>
@@ -117,9 +117,9 @@
               <li>постгарантийный ремонт</li>
             </ul>
             <div class="price">
-              <span class="sub">$</span>
-              <span class="detail">29</span>
-              <span class="sub">/mo.</span>
+              <span class="sub">руб</span>
+              <span class="detail">20.000</span>
+              <span class="sub">/</span>
             </div>
             <!--/price-->
             <button class="btn btn-conf-2 btn-green">написать</button>
@@ -143,9 +143,9 @@
               <li>иные </li>
             </ul>
             <div class="price">
-              <span class="sub">$</span>
-              <span class="detail">49</span>
-              <span class="sub">/mo.</span>
+              <span class="sub">руб</span>
+              <span class="detail">от 80.000</span>
+              <span class="sub">/</span>
             </div>
             <!--/price-->
             <button class="btn btn-conf-2 btn-green">написать</button>
@@ -163,15 +163,15 @@
           </div>
           <div class="p-body">
             <ul class="features">
-              <li>100GB Storage Space</li>
-              <li>Free Support</li>
-              <li>10,000 Users</li>
-              <li>3TB Bandwith</li>
+              <li>большой размер</li>
+              <li>средний размер</li>
+              <li>маленький размер</li>
+              
             </ul>
             <div class="price">
-              <span class="sub">$</span>
-              <span class="detail">89</span>
-              <span class="sub">/mo.</span>
+              <span class="sub">руб</span>
+              <span class="detail">от 100.000</span>
+              <span class="sub">/</span>
             </div>
             <!--/price-->
             <button class="btn btn-conf-2 btn-green">написать</button>
