--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
   <div class="container ptb">
     <div class="row centered">
-      <h2 class="mb">Услгуи Товары Цены<br/></h2>
+      <h2 class="mb">Услгуи - Товары - Цены<br/></h2>
       <div class="col-md-4">
         <div class="price-table">
           <div class="p-head">
