--- a/index.html
+++ b/index.html
@@ -218,16 +218,16 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
               <div class="item active">
-                <h3>I enjoyed so much the last edition of Landing Sumo, that I bought the tickets for the new one edition of the event the first day.</h3>
-                <h5><tgr>DAVID JHONSON</tgr></h5>
+                <h3>Мы отвечаем за гарантию</h3>
+                <h5><tgr></tgr></h5>
               </div>
               <div class="item">
-                <h3>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</h3>
-                <h5><tgr>MARK LAWRENCE</tgr></h5>
+                <h3>Бесплатная доставка по всей России</h3>
+                <h5><tgr></tgr></h5>
               </div>
               <div class="item">
-                <h3>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration, by injected humour.</h3>
-                <h5><tgr>LISA SMITH</tgr></h5>
+                <h3>Высокое качество</h3>
+                <h5><tgr></tgr></h5>
               </div>
             </div>
           </div>
@@ -244,8 +244,8 @@
   <div id="f">
     <div class="container">
       <div class="row centered">
-        <h2>You Can Contact Us</h2>
-        <h5>HELLO@EXAMPLE.COM</h5>
+        <h2>Пишите нам</h2>
+        <h5>hohlodilnicru.com</h5>
 
         <p class="mt">
   
@@ -285,10 +285,10 @@
 
             <div class="loading"></div>
             <div class="error-message"></div>
-            <div class="sent-message">Your message has been sent. Thank you!</div>
+            <div class="sent-message"></div>
 
             <div class="form-send">
-              <button type="submit" class="btn btn-large">Send Message</button>
+              <button type="submit" class="btn btn-large">Отправить сообщение</button>
             </div>
 
           </form>
