--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     <div class="container">
       <div class="row centered">
         <h2>Пишите нам</h2>
-        <h5>hohlodilnicru.com</h5>
+        <h5>holodilnicru.com</h5>
 
         <p class="mt">
   
