--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="mtb">
             <form role="form" action="register.php" method="post" enctype="plain">
               <input type="email" name="email" class="subscribe-input" placeholder="Enter your e-mail address..." required>
-              <button class='btn btn-conf btn-green' type="submit">Sart your free trial</button>
+              <button class='btn btn-conf btn-green' type="submit">найти идеальный холодильник</button>
             </form>
           </div>
           <!--/mt-->
