--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     </div>
     <!--/row-->
   </div>
-  <!--/container-->
+  <!--/container
 
   <div id="g">
     <div class="container">
@@ -205,7 +205,7 @@
           <img src="img/client5.png" alt="">
         </div>
       </div>
-      <!--/row-->
+      -->
     </div>
   </div>
   <!--/g-->
