--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-2 centered">
           <h1>"HouseHoldExpo"</h1>
-          <div class="mtb">
+          <div class="mtb" href="https://www.holodilnik.ru">
             <form role="form" action="register.php" method="post" enctype="plain">
               <input type="email" name="email" class="subscribe-input" placeholder="Enter your e-mail address..." required>
-              <button class='btn btn-conf btn-green'  href="https://www.holodilnik.ru/?utm_referrer=https%3A%2F%2Fwww.google.com%2F"
+              <button class='btn btn-conf btn-green'  
                 type="submit">найти идеальный холодильник</button>
             </form>
           </div>
