--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2 centered">
-          <h1>"HouseHoldExpo"</h1>
-          <div class="mtb" href="https://www.holodilnik.ru">
+          <h1  href="https://www.holodilnik.ru">"HouseHoldExpo"</h1>
+          <div class="mtb">
             <form role="form" action="register.php" method="post" enctype="plain">
               <input type="email" name="email" class="subscribe-input" placeholder="Enter your e-mail address..." required>
               <button class='btn btn-conf btn-green'  
