--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>«Holodilnik.ru»</title>
+  <title>«Holodilnik.ru»2025</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -48,7 +48,7 @@
           <h1  href="https://www.holodilnik.ru">"HouseHoldExpo"</h1>
           <div class="mtb">
             <form role="form" action="register.php" method="post" enctype="plain">
-              <input type="email" name="email" class="subscribe-input" placeholder="Enter your e-mail address..." required>
+              <input type="email" name="email" class="subscribe-input" placeholder="Напишпите свою почту" required>
               <button class='btn btn-conf btn-green'  
                 type="submit">найти идеальный холодильник</button>
             </form>
