--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </form>
           </div>
           <!--/mt-->
-          <h6>СКИДКИ НА ПЕРВУЮ ПОКУПКУ</h6>
+          <h6><bСКИДКИ НА ПЕРВУЮ ПОКУПКУ></b></h6>
         </div>
       </div>
       <!--/row-->
