--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -54,7 +55,7 @@
             </form>
           </div>
           <!--/mt-->
-          <h6><bСКИДКИ НА ПЕРВУЮ ПОКУПКУ></b></h6>
+          <h6>СКИДКИ НА ПЕРВУЮ ПОКУПКУ</h6>
         </div>
       </div>
       <!--/row-->
