--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2 centered">
-          <h1  href="https://www.holodilnik.ru">"HouseHoldExpo"</h1>
+          <h1  href="https://www.holodilnik.ru">HouseHoldExpo 2025</h1>
           <div class="mtb">
             <form role="form" action="register.php" method="post" enctype="plain">
               <input type="email" name="email" class="subscribe-input" placeholder="Напишпите свою почту" required>
@@ -66,7 +66,7 @@
 
   <div class="container ptb">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-10">
         <h2> Холодильник.ру — российский интернет-магазин,
 специализирующийся на продаже электроники и бытовой техники
 отечественного и зарубежного производства. 
