--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   <div class="container ptb">
     <div class="row">
-      <div class="col-md-10">
+      <div class="col-md-6">
         <h2> Холодильник.ру — российский интернет-магазин,
 специализирующийся на продаже электроники и бытовой техники
 отечественного и зарубежного производства. 
@@ -143,7 +143,7 @@
               <li></li>
               <li>холодильники</li>
               <li>морозильники</li>
-              <li>иные </li>
+              <li>иные товары</li>
             </ul>
             <div class="price">
               <span class="sub">руб</span>
